--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         .telegram-bg { background-color: #229ED9; }
         .post-content { white-space: pre-wrap; line-height: 1.7; word-break: break-word; }
         
-        /* Premium Layout Fixes */
         .gallery-vertical { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
-        .gallery-vertical img { width: 100%; border-radius: 12px; object-fit: contain; background: #000; border: 1px solid #eee; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1); }
+        .gallery-vertical img { width: 100%; border-radius: 12px; object-fit: contain; background: #000; border: 1px solid #eee; }
 
         .marquee-container { background: #FFD700; color: #37006a; padding: 7px 0; font-weight: bold; overflow: hidden; border-bottom: 2px solid #D4AF37; }
         .marquee-text { display: inline-block; white-space: nowrap; animation: marquee 30s linear infinite; padding-left: 100%; }
@@ -41,7 +40,7 @@
 </head>
 <body>
 
-    <div id="marqueeBar" class="marquee-container hidden"><div id="ticker" class="marquee-text text-[11px] uppercase tracking-widest"></div></div>
+    <div id="marqueeBar" class="marquee-container hidden"><div id="ticker" class="marquee-text text-[11px] uppercase"></div></div>
 
     <header class="purple-gradient text-white shadow-lg rounded-b-[20px] border-b-2 border-[#D4AF37] relative z-0">
         <div class="bg-black/20 px-4 py-1 flex justify-between items-center text-[9px] font-mono text-[#FFD700]">
@@ -73,7 +72,7 @@
                     <i class="fa fa-search absolute left-3 top-3 text-[#D4AF37]"></i>
                 </div>
                 <div class="flex items-center gap-2 overflow-x-auto no-scrollbar pb-1">
-                    <span class="text-[8px] font-bold text-gray-400 uppercase flex-shrink-0">Filter By:</span>
+                    <span class="text-[8px] font-bold text-gray-400 uppercase flex-shrink-0">Sort By:</span>
                     <button onclick="setGrouping('cat')" id="btnGroup-cat" class="bg-[#37006a] text-white px-3 py-1.5 rounded-lg text-[9px] font-bold border border-[#37006a]">Category</button>
                     <button onclick="setGrouping('type')" id="btnGroup-type" class="bg-white text-gray-500 px-3 py-1.5 rounded-lg text-[9px] font-bold border border-gray-200">Type</button>
                     <button onclick="setGrouping('ward')" id="btnGroup-ward" class="bg-white text-gray-500 px-3 py-1.5 rounded-lg text-[9px] font-bold border border-gray-200">Ward</button>
@@ -84,6 +83,11 @@
         </section>
 
         <section id="contactPage" class="page space-y-4">
+            <div class="bg-white p-6 rounded-2xl shadow-md border-l-4 border-[#D4AF37] mb-2 text-center slide-up">
+                <h3 class="font-bold text-[#4B0082] text-sm mb-2 uppercase tracking-tighter">လုပ်ငန်းရှင်များအတွက်</h3>
+                <p class="text-[10px] text-gray-600 mb-4 leading-relaxed">မိမိတို့ လုပ်ငန်းအချက်အလက်များကို Cherry Directory တွင် အခမဲ့ ထည့်သွင်းလိုပါက အောက်ပါ Form ကို ဖြည့်စွက်ပေးပါ။</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFGRd57WIpOOJDnZI4U9vrtZAsJCW6pRiP1WvQDrXZeRy5xA/viewform?usp=dialog" target="_blank" class="inline-block gold-gradient text-white text-[11px] font-bold px-8 py-3 rounded-2xl shadow-lg active:scale-95 transition uppercase">စာရင်းသွင်းရန်</a>
+            </div>
             <div id="adminProfileArea"></div>
             <div id="adminNotesArea" class="space-y-3"></div>
         </section>
@@ -108,6 +112,7 @@
 
         const SHEET_ID = '1rMGmfDW5AsBZGJJw5H8HyavOQiIuMr-pPvXpShktYxQ';
         const BASE_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json`;
+        const REVIEW_URL = "https://docs.google.com/forms/d/e/1FAIpQLSce4TGjXal4s0wmeNyGBdO3cg8ymNgXlilu1o_8R3-Q9LMYyw/viewform?usp=dialog";
 
         let eventsData = [], dirData = [], adminData = [];
         let activeDirCat = 'All', activeEventCat = 'All', groupByKey = 'cat';
@@ -130,10 +135,10 @@
         setInterval(updateTime, 1000); updateTime();
 
         function getStars(r) {
-            if(!r) return '';
-            let h = '<div class="flex text-orange-400 text-[7px] gap-0.5">';
+            if(!r || isNaN(r)) return '';
+            let h = '<div class="flex text-orange-400 text-[8px] gap-0.5">';
             for(let i=1; i<=5; i++) h += (i <= r) ? '<i class="fa fa-star"></i>' : (i-0.5 <= r) ? '<i class="fa fa-star-half-alt"></i>' : '<i class="far fa-star text-gray-200"></i>';
-            return h + '</div>';
+            return h + `<span class="text-gray-400 ml-1 text-[7px]">(${r})</span></div>`;
         }
 
         async function loadAllData() {
@@ -167,7 +172,7 @@
                     uid: 'dir-'+idx, name: r.c[0]?.v, cat: r.c[1]?.v, type: r.c[2]?.v, desc: r.c[3]?.v, addr: r.c[4]?.v, 
                     ward: r.c[5]?.v, city: r.c[6]?.v, ph1: r.c[7]?.v, ph2: r.c[8]?.v, viber: r.c[10]?.v, tg: r.c[11]?.v, 
                     email: r.c[12]?.v, logo: r.c[13]?.v, rating: r.c[14]?.v, note: r.c[15]?.v, 
-                    imgs: [r.c[14]?.v, r.c[15]?.v, r.c[16]?.v, r.c[17]?.v, r.c[18]?.v].filter(Boolean)
+                    imgs: [r.c[16]?.v, r.c[17]?.v, r.c[18]?.v, r.c[19]?.v, r.c[20]?.v].filter(Boolean)
                 })).filter(i => i.name && i.name !== "Name");
                 localStorage.setItem('c_dir', JSON.stringify(dirData));
                 setupFilters('dirFilters', dirData, (c) => { activeDirCat = c; handleSearch(); }); renderDirectory();
@@ -239,11 +244,11 @@
 
             if(type === 'event') {
                 const i = eventsData.find(x => x.uid === uid); document.getElementById('detailHeader').innerText = "Event Details";
-                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37] flex items-center gap-4"><img src="${fixDriveLink(i.logo)}" class="w-14 h-14 rounded-xl object-cover border shadow-sm" onerror="this.src='CDST_Logo.png'"><div class="flex-1"><h2 class="text-sm font-bold text-[#4B0082] leading-tight">${i.title}</h2><span class="text-[8px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full mt-1 inline-block uppercase">${i.cat}</span></div></div><div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-[10px] uppercase tracking-widest">Information</h3>${rR('Description', i.desc)}${rR('Organizer', i.org)}${rR('Location', i.place)}${rR('Date', i.from + ' to ' + i.to)}</div><div class="gallery-vertical">${i.imgs.map(img => `<img src="${fixDriveLink(img)}">`).join('')}</div></div>`;
+                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37] flex items-center gap-4"><img src="${fixDriveLink(i.logo)}" class="w-14 h-14 rounded-xl object-cover border shadow-sm" onerror="this.src='CDST_Logo.png'"><div class="flex-1"><h2 class="text-sm font-bold text-[#4B0082] leading-tight">${i.title}</h2><span class="text-[8px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full mt-1 inline-block uppercase">${i.cat}</span></div></div><div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-[10px] uppercase">Information</h3>${rR('Description', i.desc)}${rR('Organizer', i.org)}${rR('Location', i.place)}${rR('Date', i.from + ' to ' + i.to)}</div><div class="gallery-vertical">${i.imgs.map(img => `<img src="${fixDriveLink(img)}">`).join('')}</div></div>`;
             } else {
                 const i = dirData.find(x => x.uid === uid); document.getElementById('detailHeader').innerText = i.name;
                 content.innerHTML = `<div class="space-y-4 slide-up">
-                    <div class="bg-white rounded-3xl p-6 shadow-sm border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.logo)}" class="w-20 h-20 rounded-xl object-cover mx-auto mb-3 border shadow-sm" onerror="this.src='CDST_Logo.png'"><h2 class="text-sm font-bold text-[#4B0082] uppercase">${i.name}</h2><div class="flex justify-center mt-2 mb-4 scale-125">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="text-[9px] bg-gray-100 text-gray-500 px-4 py-2 rounded-full font-bold">Write Review</a></div>
+                    <div class="bg-white rounded-3xl p-6 shadow-sm border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.logo)}" class="w-20 h-20 rounded-xl object-cover mx-auto mb-3 border shadow-sm" onerror="this.src='CDST_Logo.png'"><h2 class="text-sm font-bold text-[#4B0082] uppercase">${i.name}</h2><div class="flex justify-center mt-2 mb-4 scale-125">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="text-[9px] bg-gray-100 text-gray-500 px-4 py-2 rounded-full font-bold shadow-sm active:scale-95 transition flex items-center justify-center gap-2 max-w-[150px] mx-auto"><i class="fa fa-pen-nib"></i> Write Review</a></div>
                     <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-1 mb-2 text-[10px] uppercase tracking-widest">Basic Info</h3>${rR('Description', i.desc)}${rR('Category', i.cat)}${rR('Type', i.type)}${rR('Ward', i.ward)}${rR('Address', i.addr)}</div>
                     <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-1 mb-2 text-[10px] uppercase tracking-widest">Contact</h3>${rP('Phone 1', i.ph1)}${rP('Phone 2', i.ph2)}</div>
                     <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-1 mb-2 text-[10px] uppercase tracking-widest">Digital Contact</h3>${rC('Viber', i.viber, 'fab fa-viber', 'viber-bg', 'viber://chat?number=')}${rC('Telegram', i.tg, 'fab fa-telegram', 'telegram-bg', 'https://t.me/')}</div>
